# xbmc

./: .gitignore  CMakeLists.txt
addons/resource.language.en_gb/resources/: strings.po
cmake/installdata/common/: addons.txt
cmake/modules/: FindCrossGUID.cmake  FindDav1d.cmake  FindFFMPEG.cmake  FindFlatBuffers.cmake  FindFmt.cmake  FindLibDvd.cmake  FindOpenGLES.cmake  FindRapidJSON.cmake  FindRuby.cmake  Findfstrcmp.cmake  LDGOLD.cmake
cmake/treedata/common/: interfaces.txt  retroplayer.txt
cmake/treedata/linux/: subdirs.txt
cmake/treedata/osx/: subdirs.txt
cmake/treedata/windows/: subdirs.txt
system/: addon-manifest.xml
system/settings/: gbm.xml  wayland.xml
system/shaders/presets/: shader-manifest.xml
tools/depends/: configure.ac
xbmc/: AppInboundProtocol.cpp  AppInboundProtocol.h  AppParamParser.cpp  AppParamParser.h  Application.cpp  Application.h  ApplicationRendering.cpp  ApplicationRendering.h  CMakeLists.txt  PlayListPlayer.cpp  ServiceManager.cpp  ServiceManager.h  XBApplicationEx.cpp  XBApplicationEx.h  XBDateTime.cpp  system_gl.h
xbmc/addons/: AddonBuilder.cpp  BinaryAddonCache.cpp  CMakeLists.txt  ShaderPreset.cpp  ShaderPreset.h
xbmc/addons/addoninfo/: AddonInfo.cpp  AddonType.h
xbmc/cores/RetroPlayer/rendering/: RPRenderManager.cpp  RenderVideoSettings.cpp
xbmc/cores/RetroPlayer/shaders/: CMakeLists.txt  IShader.h  IShaderLut.h  IShaderPreset.h  IShaderSampler.h  IShaderTexture.cpp  IShaderTexture.h  ShaderPresetFactory.cpp  ShaderPresetFactory.h  ShaderTypes.h  ShaderUtils.cpp  ShaderUtils.h
xbmc/cores/VideoPlayer/Buffers/: CMakeLists.txt  VideoBufferDMA.cpp  VideoBufferDRMPRIME.cpp  VideoBufferDRMPRIME.h  VideoBufferPoolDMA.cpp
xbmc/cores/VideoPlayer/DVDDemuxers/: DVDDemuxFFmpeg.cpp
xbmc/cores/VideoPlayer/VideoRenderers/: RenderManager.cpp
xbmc/dialogs/: GUIDialogNumeric.cpp
xbmc/events/: EventLog.cpp
xbmc/filesystem/: AddonsDirectory.cpp  NFSDirectory.cpp
xbmc/games/: GameServices.cpp  GameServices.h
xbmc/guilib/: CMakeLists.txt  D3DResource.cpp  D3DResource.h  GUIDialog.cpp  GUIEditControl.cpp  GUIMessage.h  GUIWindow.cpp  GUIWindowManager.cpp  IWindowManagerCallback.h  Shader.cpp  Texture.cpp  Texture.h  TextureGBM.cpp  TextureGBM.h  TextureGL.cpp  TextureGL.h
xbmc/input/: InertialScrollingHandler.cpp
xbmc/interfaces/builtins/: PlayerBuiltins.cpp  SkinBuiltins.cpp
xbmc/interfaces/generic/: ScriptInvocationManager.cpp
xbmc/interfaces/legacy/: Dialog.cpp  ModuleXbmc.cpp
xbmc/interfaces/python/: PythonInvoker.cpp
xbmc/interfaces/ruby/: CMakeLists.txt  RubyInterface.cpp  RubyInterface.h  RubyInvoker.cpp  RubyInvoker.h
xbmc/interfaces/swig/: CMakeLists.txt
xbmc/music/infoscanner/: MusicInfoScanner.cpp
xbmc/network/upnp/: UPnPInternal.cpp  UPnPRenderer.cpp
xbmc/peripherals/: Peripherals.cpp
xbmc/peripherals/addons/: PeripheralAddon.cpp
xbmc/platform/: xbmc.cpp  xbmc.h
xbmc/platform/linux/: CPUInfoLinux.cpp
xbmc/platform/posix/: PosixTimezone.cpp  PosixTimezone.h  main.cpp
xbmc/platform/win10/: Win10App.cpp
xbmc/platform/win32/: WinMain.cpp
xbmc/pvr/dialogs/: GUIDialogPVRTimerSettings.cpp  GUIDialogPVRTimerSettings.h
xbmc/pvr/guilib/: PVRGUIActions.cpp
xbmc/pvr/windows/: GUIWindowPVRGuide.cpp
xbmc/rendering/gles/: GLESShader.cpp  GLESShader.h  RenderSystemGLES.cpp  RenderSystemGLES.h
xbmc/settings/windows/: GUIControlSettings.cpp
xbmc/storage/: DetectDVDType.cpp
xbmc/utils/: CMakeLists.txt  EDIDUtils.cpp  EDIDUtils.h  EGLFence.cpp  EGLFence.h  EGLImage.cpp  EGLImage.h  EGLUtils.cpp  EGLUtils.h  GBMBufferObject.cpp  GBMBufferObject.h  RssManager.cpp  RssManager.h
xbmc/video/: VideoInfoScanner.cpp
xbmc/windowing/: GraphicContext.cpp
xbmc/windowing/X11/: WinSystemX11GLContext.cpp  WinSystemX11GLESContext.cpp
xbmc/windowing/gbm/: DRMUtils.cpp  DRMUtils.h  VideoLayerBridge.h  WinSystemGbmEGLContext.cpp  WinSystemGbmEGLContext.h  WinSystemGbmGLESContext.cpp
xbmc/windowing/linux/: WinSystemEGL.h
xbmc/windowing/wayland/: WinSystemWaylandEGLContextGLES.cpp
xbmc/windows/: GUIMediaWindow.cpp
(+70 files in other folders)
